# decadog

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.circleci/: config.yml
decadog/: Cargo.toml
decadog/src/: args.rs  error.rs  interact.rs  main.rs  sprint.rs
decadog/src/command/: mod.rs  sprint.rs
decadog_core/: Cargo.toml
decadog_core/src/: core.rs  error.rs  github.rs  lib.rs  secret.rs  zenhub.rs
decadog_core/src/github/: mod.rs  paginate.rs  request.rs
example/: decadog.yml
src/: core.rs  lib.rs  secret.rs
