[package]
name = "decadog"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
config = { version = "0.9.3", default-features = false, features = ["yaml"] }
dialoguer = "0.5.0"
env_logger = "0.7.1"
log = "0.4.8"
reqwest = "0.9.22"
scout = "1.3.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
snafu = "0.6.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
