[package]
name = "decadog"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

[dependencies]
decadog_core = { path = "../decadog_core" }

colored = "1.9.2"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
dialoguer = "0.5.0"
env_logger = "0.7.1"
indexmap = "1.3.2"
keyring = { version = "0.8.0", optional = true }
lazy_static = "1.4.0"
log = "0.4.8"
scout = "1.3.0"
serde = "1.0.103"
serde_derive = "1.0.103"
snafu = "0.6.3"
chrono = "0.4.11"
structopt = "0.3.11"

[features]
default_features = ["config_keyring"]

# Load sensitive configuration from system keyring
config_keyring = ["keyring"]
