[package]
name = "decadog_core"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
env_logger = "0.7.1"
log = "0.4.8"
reqwest = "0.9.22"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.44"
snafu = "0.6.0"

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "0.6.1"
serde_test = "1.0.102"
