[package]
name = "decadog_core"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
env_logger = "0.7.1"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.7"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.52"
snafu = "0.6.8"
url = "2.1.1"
serde_plain = "0.3.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
serde_test = "1.0.106"
mockito = "0.25.1"
